comprehensive GC options, picked up from hbase list posting